Creato con Colab

--- a/Supplier_offer_analysis_AI_PBI.ipynb
+++ b/Supplier_offer_analysis_AI_PBI.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1h-TjHgg4zS4KmtjfbKTCzW4pHfPaDcHL",
-      "authorship_tag": "ABX9TyMlKSVUF/i1CS2TgvCNJoP3",
+      "authorship_tag": "ABX9TyMgenyzs5IT0Z7Mq/eu89+r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Strumento per la COMPARAZIONE di offerte fornitori in ambito edile-impiantistico**"
+        "**Tool for comparison and rating of supplier offers in construction sector**"
       ],
       "metadata": {
         "id": "HiyRg43X5mKV"
@@ -48,7 +48,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "STEP1: Definizione dei percorsi contenenti input e output"
+        "STEP1: Setup folders for input and output"
       ],
       "metadata": {
         "id": "ttC3iNVUGv-_"
@@ -168,6 +168,58 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "STEP3: JSON Structure for Offer Data\n",
+        "\n",
+        "This Python script defines a JSON structure for storing comprehensive Offer data"
+      ],
+      "metadata": {
+        "id": "mBxzI8f_AI-9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import json\n",
+        "structure = {\n",
+        "    \"content\": {\n",
+        "        \"supplier_information\": {\n",
+        "            \"name\": \"\",\n",
+        "            \"phone\": \"\",\n",
+        "            \"email\": \"\",\n",
+        "            \"location\": { \"city\": \"\", \"countryISO\": \"\", \"countryName\": \"\" }\n",
+        "        },\n",
+        "        \"Product\": [\n",
+        "            {\n",
+        "                \"Code\": \"\",\n",
+        "                \"Description\": \"\",\n",
+        "                \"UnitOfMeasure\": \"\",\n",
+        "                \"Quantity\": \"\",\n",
+        "                \"UnitPrice\": \"\",\n",
+        "                \"Amount\": \"\"\n",
+        "            }\n",
+        "        ],\n",
+        "        \"Total\": {\n",
+        "            \"Amount\": \"\",\n",
+        "            \"Currency\": \"\"\n",
+        "        },\n",
+        "        \"WorkScheduling\": {\n",
+        "            \"DeliveryDate\": \"\",\n",
+        "            \"DeliveryConditions\": \"\"\n",
+        "        }\n",
+        "    }\n",
+        "}\n",
+        "\n",
+        "offerStructure = json.dumps(structure)"
+      ],
+      "metadata": {
+        "id": "fnQma5ruAH-g"
+      },
+      "execution_count": 17,
+      "outputs": []
     }
   ]
 }
