coding ok, need test.

--- a/Supplier_offer_analysis_AI_PBI.ipynb
+++ b/Supplier_offer_analysis_AI_PBI.ipynb
@@ -4,8 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "mount_file_id": "1h-TjHgg4zS4KmtjfbKTCzW4pHfPaDcHL",
-      "authorship_tag": "ABX9TyMoTeXxTWElvZhZ3JDKnEyW",
+      "authorship_tag": "ABX9TyMme1faXIUR/H2KIG3XHLKA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -289,9 +290,7 @@
         "                {\"role\": \"user\", \"content\": \"You need to summarize the data in the following structured JSON format:\" + offerStructure},\n",
         "                {\"role\": \"user\", \"content\": \"The products section should only contain a list of products identified by description, unit, quantity, price and amount\"},\n",
         "                {\"role\": \"user\", \"content\": \"The total section refers to total amount of offer and should contain a single value with related currency\"},\n",
-        "                # {\"role\": \"user\", \"content\": \"The fields systems_knowledge refers to knowledge of software, tools, or systems and should contain values like 'Microsoft Office', 'Python', 'Salesforce', etc.\"},\n",
-        "                # {\"role\": \"user\", \"content\": \"The field proficiency in languages should be set to one of the following values: basic, intermediate, advanced, full professional proficiency\"},\n",
-        "                # {\"role\": \"user\", \"content\": \"education and working_experiences field sort_order_newest_to_oldest should be set to 0 for the most recent record and should be incremented by 1 for each subsequent record\"},\n",
+        "                {\"role\": \"user\", \"content\": \"The contract information section refers to conditions and expiration date of the offer},\n",
         "                {\"role\": \"user\", \"content\": \"The work scheduling section contain the delivery date and the delivery conditions\"}\n",
         "        ]\n",
         "    )\n",
@@ -462,8 +461,8 @@
         "client = OpenAI(api_key=Constants.OpenAIKey)\n",
         "\n",
         "# Define the paths for the JSON files\n",
-        "json_path_OCR_Position = results_folder_path + \"/OCR_Position.json\"\n",
-        "json_path_LLM_Position = results_folder_path + \"/LLM_Position.json\"\n",
+        "json_path_OCR_Request = results_folder_path + \"/OCR_Request.json\"\n",
+        "json_path_LLM_Request = results_folder_path + \"/LLM_Request.json\"\n",
         "\n",
         "# Load the OCR results from the JSON file\n",
         "with open(json_path_OCR_Position, 'r') as file:\n",
@@ -492,7 +491,7 @@
         "# Create the response object\n",
         "response_object = {\n",
         "    \"filename\": filename,\n",
-        "    \"position\": completion.choices[0].message.content\n",
+        "    \"request\": completion.choices[0].message.content\n",
         "}\n",
         "\n",
         "# Save the response to the output file (overwriting any existing file)\n",
@@ -596,19 +595,19 @@
         "json_path_LLM_Result =  results_folder_path + \"/LLM_Analysis.json\"\n",
         "\n",
         "# Load the JSON data from the Position file\n",
-        "with open(json_path_LLM_Position, 'r') as file:\n",
+        "with open(json_path_LLM_Request, 'r') as file:\n",
         "    position_data = json.load(file)\n",
         "\n",
         "# Extract the \"position\" field\n",
-        "position = position_data.get('position', None)\n",
+        "position = position_data.get('request', None)\n",
         "\n",
         "# Ensure the position data is available\n",
         "if not position:\n",
-        "    raise ValueError(\"The 'position' field is missing in the Position JSON file.\")\n",
+        "    raise ValueError(\"The 'request' field is missing in the Request JSON file.\")\n",
         "\n",
-        "# Load the JSON data from the Normalized CV file\n",
-        "with open(json_path_LLM_Normalized_CV, 'r') as file:\n",
-        "    cv_data = json.load(file)\n",
+        "# Load the JSON data from the Normalized Offers file\n",
+        "with open(json_path_LLM_Normalized_Offer, 'r') as file:\n",
+        "    offer_data = json.load(file)\n",
         "\n",
         "# Load existing results or initialize an empty list if the file doesn't exist\n",
         "if os.path.exists(json_path_LLM_Result):\n",
@@ -623,19 +622,19 @@
         "# Initialize a list to store new responses\n",
         "new_responses = []\n",
         "\n",
-        "# Iterate through each CV object\n",
-        "for cv in cv_data:\n",
-        "    filename = cv.get('filename')\n",
+        "# Iterate through each offer object\n",
+        "for offer in offer_data:\n",
+        "    filename = offer.get('filename')\n",
         "\n",
         "    # Check if the filename already exists in the results\n",
         "    if any(result['filename'] == filename for result in existing_results):\n",
         "        print(f\"Result for {filename} already exists in LLM_Analysis.json. Skipping...\")\n",
         "        continue\n",
         "\n",
-        "    # Prepare the CV data for the OpenAI request\n",
-        "    candidate_cv = cv.get('cv', None)\n",
-        "    if not candidate_cv:\n",
-        "        print(f\"No CV data found for {filename}. Skipping...\")\n",
+        "    # Prepare the offer data for the OpenAI request\n",
+        "    supplier_offer = offer.get('offer', None)\n",
+        "    if not supplier_offer:\n",
+        "        print(f\"No offer data found for {filename}. Skipping...\")\n",
         "        continue\n",
         "\n",
         "    # Make the request to OpenAI\n",
@@ -644,11 +643,11 @@
         "            model=gptModel,\n",
         "            response_format={\"type\": \"json_object\"},\n",
         "            messages=[\n",
-        "                {\"role\": \"system\", \"content\": \"You need to perfectly understand the following position description in JSON: \" + position},\n",
-        "                {\"role\": \"system\", \"content\": \"You are an amazing non-biased recruiter whose job is to perfectly understand the following candidate data in JSON: \" + candidate_cv},\n",
-        "                {\"role\": \"user\", \"content\": \"Based on the previous information, you need to assess a candidate's fit to the position and output the information in EXACTLY this JSON format:\" + resultStructure},\n",
+        "                {\"role\": \"system\", \"content\": \"You need to perfectly understand the following request description in JSON: \" + request},\n",
+        "                {\"role\": \"system\", \"content\": \"You are an amazing non-biased procurement expert whose job is to perfectly understand the following supplier offer data in JSON: \" + supplier_offer},\n",
+        "                {\"role\": \"user\", \"content\": \"Based on the previous information, you need to evaluate offers that fit to the request and output the information in EXACTLY this JSON format:\" + resultStructure},\n",
         "                {\"role\": \"user\", \"content\": \"The value field should be an integer, from 0 (Not a match) to 100 (Complete match), using only multiples of 10 (0, 10, 20, ..., 100)\"},\n",
-        "                {\"role\": \"user\", \"content\": \"The reasoning field should be a string, explaining why the candidate is a match or not including a gap analysis of what was missing to be a complete match\"}\n",
+        "                {\"role\": \"user\", \"content\": \"The reasoning field should be a string, explaining why the offer is a match or not including a gap analysis of what was missing to be a complete match\"}\n",
         "            ]\n",
         "        )\n",
         "\n",
@@ -663,7 +662,7 @@
         "    except Exception as e:\n",
         "        print(f\"An error occurred for {filename}: {str(e)}\")\n",
         "\n",
-        "# After processing all CVs, append the new responses to the existing results and save\n",
+        "# After processing all offers, append the new responses to the existing results and save\n",
         "if new_responses:\n",
         "    existing_results.extend(new_responses)\n",
         "    with open(json_path_LLM_Result, \"w\") as json_file:\n",
