update and fixing

--- a/Supplier_offer_analysis_AI_PBI.ipynb
+++ b/Supplier_offer_analysis_AI_PBI.ipynb
@@ -4,9 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "mount_file_id": "1h-TjHgg4zS4KmtjfbKTCzW4pHfPaDcHL",
-      "authorship_tag": "ABX9TyMme1faXIUR/H2KIG3XHLKA",
+      "authorship_tag": "ABX9TyMONj1VcmLpK6NoflNBF4ve",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -458,7 +457,7 @@
         "sys.path.remove(\"..\")\n",
         "\n",
         "# Initialize OpenAI client with the API key from Constants\n",
-        "client = OpenAI(api_key=Constants.OpenAIKey)\n",
+        "client = OpenAI(api_key=\"\")\n",
         "\n",
         "# Define the paths for the JSON files\n",
         "json_path_OCR_Request = results_folder_path + \"/OCR_Request.json\"\n",
@@ -587,7 +586,7 @@
         "sys.path.remove(\"..\")\n",
         "\n",
         "# Initialize OpenAI client with the API key from Constants\n",
-        "client = OpenAI(api_key=Constants.OpenAIKey)\n",
+        "client = OpenAI(api_key=\"\")\n",
         "\n",
         "# Define the paths for the JSON files\n",
         "json_path_LLM_Request = results_folder_path + \"/LLM_Request.json\"\n",
